--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="~/ProyectoFinalPA.styles.css" asp-append-version="true" />
     <style>
         body {
-            background-image: url('/Images/FONDO1.jpg');
+            background-image: url('/Images/FONDOAZUL.jpg');
             min-height: 100vh;
             margin: 0;
             background-size: cover;
