--- a/Views/Colaboradores/Index.cshtml
+++ b/Views/Colaboradores/Index.cshtml
@@ -44,19 +44,19 @@
             font-family: 'Georgia', serif;
             font-size: 2rem; 
             font-weight: bold; 
-            color: darkgreen; 
+            color: black;
         }
 
         .fuente-letras {
             font-family: 'Georgia', serif;
             font-size: 1rem; 
             font-weight: normal;
-            color: darkgreen; 
+            color: black;
         }
 
         .cuadro-personalizado {
             background-color: white;
-            border: 2.5px solid darkgreen;
+            border: 2.5px solid black;
             border-radius: 15px; 
             padding: 18px; 
             font-family: 'Georgia', serif; 
@@ -66,7 +66,7 @@
 
         .cuadros {
             background-color: white;
-            border: 2.5px solid darkgreen; 
+            border: 2.5px solid black;
             border-radius: 15px; 
             padding: 18px; 
             font-family: 'Georgia', serif;
