--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -21,7 +21,7 @@
         .izq-pantalla {
             position: fixed;
             top: 13%;
-            left: 2%;
+            left: 3%;
             transform: translateX(-2%);
             display: flex;
             justify-content: center;
@@ -30,7 +30,7 @@
         /* Estilo para texto importante con letra elegante y verde oscuro */
         .fuente-letras {
             font-family: 'Georgia', serif; 
-            font-size: 1.5rem; 
+            font-size: 2.5rem; 
             font-weight: bold; 
             color: black; 
         }
@@ -62,6 +62,7 @@
 
         .cuadro-imagen {
             border: 2px solid #B8860B;
+            background-color: #F5E9D7;
             color: white;
             width: 100%;
             height: 152px;
@@ -90,6 +91,12 @@
             font-size: 2rem; 
             font-weight: bold;
         }
+
+        .cuadro-imagen img {
+            max-width: 100%;
+            max-height: 100%;
+            object-fit: fill;
+        }
     </style>
 </head>
 <body>
@@ -104,20 +111,28 @@
     }
     <div class="posicion-botones">
         <!-- Botones de navegación hacia los módulos principales del sistema -->
-        <div class="cuadro-personalizado ms-5">
-            <div class="cuadro-imagen" style="background-image: url('/Images/clases.jpeg');"></div>
+        <div class="cuadro-personalizado">
+            <div class="cuadro-imagen">
+                <img src="/Images/clases.jpg" alt="Clases" />
+            </div>
             <a class="btn boton fuente" asp-controller="Clases" asp-action="Index">Clases</a>
         </div>
         <div class="cuadro-personalizado ms-5">
-            <div class="cuadro-imagen" style="background-image: url('/Images/images.jpeg');"></div>
+            <div class="cuadro-imagen">
+                <img src="/Images/tareas1.jpg" alt="Tareas" />
+            </div>
             <a class="btn boton fuente" asp-controller="Tareas" asp-action="Index">Tareas</a>
         </div>
         <div class="cuadro-personalizado ms-5">
-            <div class="cuadro-imagen" style="background-image: url('/Images/materiales.jpeg');"></div>
+            <div class="cuadro-imagen">
+                <img src="/Images/materiales.jpg" alt="Materiales" />
+            </div>
             <a class="btn boton fuente" asp-controller="Materiales" asp-action="Index">Materiales</a>
         </div>
         <div class="cuadro-personalizado ms-5">
-            <div class="cuadro-imagen" style="background-image: url('/Images/tutoria.jpeg');"></div>
+            <div class="cuadro-imagen">
+                <img src="/Images/tutorias.jpg" alt="Tutorias" />
+            </div>
             <a class="btn boton fuente" asp-controller="Tutorias" asp-action="Index">Tutorías</a>
         </div>
     </div>
