--- a/Views/Usuarios/Login.cshtml
+++ b/Views/Usuarios/Login.cshtml
@@ -10,7 +10,7 @@
             height: 100%;
             margin: 0;
         }
-        /* Estilo del recuadro del formulario con borde verde y fondo blanco */
+        /* Estilo del recuadro del formulario*/
         .cuadro-personalizado {
             background-color: white; 
             border: 2px solid black;
