--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -27,7 +27,7 @@
             justify-content: center;
             align-items: center;
         }
-        /* Estilo para texto importante con letra elegante y verde oscuro */
+        /* Estilo para texto importante con letra elegante */
         .fuente-letras {
             font-family: 'Georgia', serif; 
             font-size: 2.5rem; 
@@ -47,7 +47,7 @@
             width: auto; 
             height: auto; 
         }
-        /* Estilo para botones verdes y azules como Clases y Materiales */
+        /* Estilo para botones como Clases y Materiales */
         .boton{
             background-color: #FFB300;
             border: 2px solid #B8860B;
